alignment fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,7 @@ div#eachFun {
 
 .codeSquares {
 	float: left;
-	min-height: 451px;
+	min-height: 510px;
 	width: 49%;
 }
 
